[gd_scene load_steps=13 format=3 uid="uid://eqiy6h1qfe24"]

[ext_resource type="Script" path="res://game_manager.gd" id="1_y075x"]
[ext_resource type="PackedScene" uid="uid://co1s1kqhenx38" path="res://platform_purple.tscn" id="3_qakuj"]
[ext_resource type="PackedScene" uid="uid://cx08oql6tnr76" path="res://platform_blue.tscn" id="3_su4i6"]
[ext_resource type="PackedScene" uid="uid://xn3206utuilo" path="res://platform_green.tscn" id="4_nsixm"]
[ext_resource type="PackedScene" uid="uid://b5mcynomme1lt" path="res://platform_salmon.tscn" id="5_emopn"]
[ext_resource type="Texture2D" uid="uid://bf8vcv4kmnlpw" path="res://triangle.svg" id="5_ylgip"]
[ext_resource type="PackedScene" uid="uid://c07h0yfrhghqn" path="res://player.tscn" id="6_xrx8n"]
[ext_resource type="LabelSettings" uid="uid://c2pjduu8ismol" path="res://label.tres" id="8_vun1a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1dc1"]
size = Vector2(692, 20)

[sub_resource type="Gradient" id="Gradient_qh4tf"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.839216, 0.921569, 0.921569, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_axqvl"]
gradient = SubResource("Gradient_qh4tf")

[sub_resource type="LabelSettings" id="LabelSettings_vrdds"]
font_size = 256
outline_size = 32
outline_color = Color(0.592157, 0.611765, 0.878431, 1)
shadow_size = 32
shadow_color = Color(0.592157, 0.611765, 0.878431, 1)
shadow_offset = Vector2(16, 16)

[node name="Game" type="Node2D" node_paths=PackedStringArray("score_label", "death_container", "death_area", "highscore_label")]
script = ExtResource("1_y075x")
platform_scenes = Array[PackedScene]([ExtResource("3_qakuj"), ExtResource("3_su4i6"), ExtResource("4_nsixm"), ExtResource("5_emopn")])
score_label = NodePath("CanvasLayer/Score Container/Score Label")
death_container = NodePath("CanvasLayer/Death Container")
death_area = NodePath("Death")
highscore_label = NodePath("CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Highschore Label")

[node name="Death" type="Area2D" parent="."]
position = Vector2(656, 2332)
scale = Vector2(2, 2)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
shape = SubResource("RectangleShape2D_x1dc1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(670, 1612)
scale = Vector2(2, 2)
limit_left = 0
limit_right = 1296
limit_bottom = 2304
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_vertical_enabled = true
drag_top_margin = 0.1
editor_draw_limits = true

[node name="Player" parent="." instance=ExtResource("6_xrx8n")]
position = Vector2(670, 1713)

[node name="RemoteTransform2D" parent="Player/Marker2D" index="0"]
remote_path = NodePath("../../../Camera2D")

[node name="Platforms" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(652.5, 1152.5)
scale = Vector2(21.9844, 38.1719)
texture = SubResource("GradientTexture2D_axqvl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score Container" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 178.0
grow_horizontal = 2

[node name="Score Label" type="Label" parent="CanvasLayer/Score Container"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_vrdds")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Death Container" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Death Container"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Death Container/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Death Label" type="Label" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "YOU DIED !111!1!11"
label_settings = ExtResource("8_vun1a")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Highest: "
label_settings = ExtResource("8_vun1a")

[node name="Highschore Label" type="Label" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = ExtResource("8_vun1a")

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="Restart Button" type="Button" parent="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "RESTART"

[node name="Left Button" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(557, 2311)
rotation = 3.14159
scale = Vector2(4.89735, 3.94078)
texture_normal = ExtResource("5_ylgip")
action = "ui_left"

[node name="Right Button" type="TouchScreenButton" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1285, 2311)
rotation = 3.14159
scale = Vector2(4.89735, 3.94078)
texture_normal = ExtResource("5_ylgip")
action = "ui_right"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = 889.0
offset_top = 1899.0
offset_right = 999.0
offset_bottom = 2024.0
scale = Vector2(2, 2)
texture = ExtResource("5_ylgip")
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 247.0
offset_top = 1899.0
offset_right = 357.0
offset_bottom = 2024.0
scale = Vector2(2, 2)
texture = ExtResource("5_ylgip")
stretch_mode = 4
flip_h = true

[node name="Platform" parent="." instance=ExtResource("3_qakuj")]
position = Vector2(662, 2000)

[node name="Platform2" parent="." instance=ExtResource("4_nsixm")]
position = Vector2(290, 1200)

[node name="Platform3" parent="." instance=ExtResource("5_emopn")]
position = Vector2(1046, 401)

[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="just_jumped" from="Player" to="." method="_on_player_just_jumped"]
[connection signal="pressed" from="CanvasLayer/Death Container/PanelContainer/MarginContainer/VBoxContainer/Restart Button" to="." method="_on_restart_button_pressed"]

[editable path="Player"]
